--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <!-- <link rel="stylesheet" href="./style.css" /> -->
   </head>
   <body>
-    <div id="root">not rendered</div>
+    <div id="root"></div>
     <script src="./index.js"></script>
   </body>
 </html>
